# fleet-dns

./: .gitignore  .jscpd.json  Cargo.toml  Dockerfile  build.sh
.github/workflows/: release.yml
src/: config.rs  crd.rs  crd_prelude.rs  error.rs  lib.rs  main.rs  metrics.rs  oidc_state.rs  reconciler.rs  state.rs  traefik.rs
src/discovery/: dhcp.rs  ingress.rs  mod.rs  oidc.rs  pods.rs  policies.rs  services.rs
src/targets/: cloudflare.rs  coredns.rs  mod.rs  opnsense.rs  zitadel.rs
