[package]
name = "fleet-dns"
version = "0.6.5"
edition = "2024"

[dependencies]
axum = "0.8"
base64 = "0.22"
futures = "0.3"
jsonwebtoken = "9"
k8s-openapi = { version = "0.25", features = ["latest"] }
kube = { version = "1", features = ["runtime", "derive", "client"] }
prometheus-client = "0.23"
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
schemars = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.release]
lto = true
strip = true
opt-level = "z"
